// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`internal-calls > callAnotherContract 1`] = `
{
  "args": [],
  "callType": "CALL",
  "called": [
    {
      "args": [],
      "callType": "CALL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
          "depth": 1,
          "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "functionLineEnd": 19,
          "functionLineStart": 16,
          "functionName": "internalFunction2",
          "functionSource": "test-contracts/internal-calls/CalleeContract.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
          "depth": 1,
          "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "functionLineEnd": 24,
          "functionLineStart": 21,
          "functionName": "privateFunction2",
          "functionSource": "test-contracts/internal-calls/CalleeContract.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
      "depth": 1,
      "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "functionLineEnd": 14,
      "functionLineStart": 9,
      "functionName": "callInternalAndPrivate2",
      "functionSource": "test-contracts/internal-calls/CalleeContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x681413d1",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [
          {
            "args": [
              "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
              "internalFunction2 called",
              2n,
            ],
            "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
            "eventName": "Log",
            "eventSignature": "Log(address,string,uint256)",
            "functionName": "callInternalAndPrivate2",
            "functionType": "function",
            "rawData": [
              "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              [
                "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
                "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
              ],
              "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000018696e7465726e616c46756e6374696f6e322063616c6c65640000000000000000",
            ],
          },
          {
            "args": [
              "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
              "privateFunction2 called",
              3n,
            ],
            "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
            "eventName": "Log",
            "eventSignature": "Log(address,string,uint256)",
            "functionName": "callInternalAndPrivate2",
            "functionType": "function",
            "rawData": [
              "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              [
                "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
                "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
              ],
              "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000000000000000000177072697661746546756e6374696f6e322063616c6c6564000000000000000000",
            ],
          },
          {
            "args": [
              "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
              "callInternalAndPrivate2 called",
              1n,
            ],
            "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
            "eventName": "Log",
            "eventSignature": "Log(address,string,uint256)",
            "functionName": "callInternalAndPrivate2",
            "functionType": "function",
            "rawData": [
              "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              [
                "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
                "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
              ],
              "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000001e63616c6c496e7465726e616c416e6450726976617465322063616c6c65640000",
            ],
          },
        ],
        "returnValue": {
          "ok": true,
          "value": 6n,
        },
        "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000006",
        "type": "FunctionResultEvent",
      },
      "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionLineEnd": 49,
  "functionLineStart": 45,
  "functionName": "callAnotherContract",
  "functionSource": "test-contracts/internal-calls/CallerContract.sol",
  "functionType": "function",
  "precompile": false,
  "rawData": "0x63e20347",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": [
          "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
          "internalFunction2 called",
          2n,
        ],
        "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
        "eventName": "Log",
        "eventSignature": "Log(address,string,uint256)",
        "functionName": "callAnotherContract",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
            "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000018696e7465726e616c46756e6374696f6e322063616c6c65640000000000000000",
        ],
      },
      {
        "args": [
          "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
          "privateFunction2 called",
          3n,
        ],
        "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
        "eventName": "Log",
        "eventSignature": "Log(address,string,uint256)",
        "functionName": "callAnotherContract",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
            "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000000000000000000177072697661746546756e6374696f6e322063616c6c6564000000000000000000",
        ],
      },
      {
        "args": [
          "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
          "callInternalAndPrivate2 called",
          1n,
        ],
        "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
        "eventName": "Log",
        "eventSignature": "Log(address,string,uint256)",
        "functionName": "callAnotherContract",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
            "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
          ],
          "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000001e63616c6c496e7465726e616c416e6450726976617465322063616c6c65640000",
        ],
      },
      {
        "args": {
          "message": "callAnotherContract called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "callAnotherContract",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001a63616c6c416e6f74686572436f6e74726163742063616c6c6564000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": 6n,
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000006",
    "type": "FunctionResultEvent",
  },
  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;

exports[`internal-calls > mixedCall 1`] = `
{
  "args": [
    2n,
  ],
  "callType": "CALL",
  "called": [
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 38,
          "functionLineStart": 35,
          "functionName": "privateFunction",
          "functionSource": "test-contracts/internal-calls/CallerContract.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 29,
      "functionLineStart": 25,
      "functionName": "internalFunction",
      "functionSource": "test-contracts/internal-calls/CallerContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 38,
      "functionLineStart": 35,
      "functionName": "privateFunction",
      "functionSource": "test-contracts/internal-calls/CallerContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 33,
      "functionLineStart": 31,
      "functionName": "internalFunction2",
      "functionSource": "test-contracts/internal-calls/CallerContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [],
              "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
              "depth": 0,
              "from": "0x0000000000000000000000000000000000000000",
              "functionLineEnd": 38,
              "functionLineStart": 35,
              "functionName": "privateFunction",
              "functionSource": "test-contracts/internal-calls/CallerContract.sol",
              "functionType": "function",
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "0x",
                "type": "FunctionResultEvent",
              },
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 29,
          "functionLineStart": 25,
          "functionName": "internalFunction",
          "functionSource": "test-contracts/internal-calls/CallerContract.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 43,
      "functionLineStart": 40,
      "functionName": "publicFunction",
      "functionSource": "test-contracts/internal-calls/CallerContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "args": [
        2n,
      ],
      "callType": "CALL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [],
              "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
              "depth": 1,
              "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "functionLineEnd": 38,
              "functionLineStart": 35,
              "functionName": "privateFunction",
              "functionSource": "test-contracts/internal-calls/CallerContract.sol",
              "functionType": "function",
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "0x",
                "type": "FunctionResultEvent",
              },
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 1,
          "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "functionLineEnd": 29,
          "functionLineStart": 25,
          "functionName": "internalFunction",
          "functionSource": "test-contracts/internal-calls/CallerContract.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 1,
      "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "functionLineEnd": 43,
      "functionLineStart": 40,
      "functionName": "publicFunction",
      "functionSource": "test-contracts/internal-calls/CallerContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x304877d10000000000000000000000000000000000000000000000000000000000000002",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [
          {
            "args": {
              "message": "privateFunction called",
              "value": 0n,
            },
            "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
            "eventName": "Log",
            "eventSignature": "Log(string,uint256)",
            "functionName": "publicFunction",
            "functionType": "function",
            "rawData": [
              "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              [
                "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
              ],
              "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
            ],
          },
          {
            "args": {
              "message": "internalFunction called",
              "value": 0n,
            },
            "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
            "eventName": "Log",
            "eventSignature": "Log(string,uint256)",
            "functionName": "publicFunction",
            "functionType": "function",
            "rawData": [
              "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              [
                "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
              ],
              "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
            ],
          },
        ],
        "returnValue": {
          "ok": true,
          "value": 7n,
        },
        "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000007",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [],
              "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
              "depth": 0,
              "from": "0x0000000000000000000000000000000000000000",
              "functionLineEnd": 38,
              "functionLineStart": 35,
              "functionName": "privateFunction",
              "functionSource": "test-contracts/internal-calls/CallerContract.sol",
              "functionType": "function",
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "0x",
                "type": "FunctionResultEvent",
              },
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 29,
          "functionLineStart": 25,
          "functionName": "internalFunction",
          "functionSource": "test-contracts/internal-calls/CallerContract.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 43,
      "functionLineStart": 40,
      "functionName": "publicFunction",
      "functionSource": "test-contracts/internal-calls/CallerContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionLineEnd": 23,
  "functionLineStart": 15,
  "functionName": "mixedCall",
  "functionSource": "test-contracts/internal-calls/CallerContract.sol",
  "functionType": "function",
  "precompile": false,
  "rawData": "0xd13caaaa0000000000000000000000000000000000000000000000000000000000000002",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": 25n,
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000019",
    "type": "FunctionResultEvent",
  },
  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;

exports[`internal-calls > publicFunction 1`] = `
{
  "args": [
    2n,
  ],
  "callType": "CALL",
  "called": [
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 38,
          "functionLineStart": 35,
          "functionName": "privateFunction",
          "functionSource": "test-contracts/internal-calls/CallerContract.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 29,
      "functionLineStart": 25,
      "functionName": "internalFunction",
      "functionSource": "test-contracts/internal-calls/CallerContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionLineEnd": 43,
  "functionLineStart": 40,
  "functionName": "publicFunction",
  "functionSource": "test-contracts/internal-calls/CallerContract.sol",
  "functionType": "function",
  "precompile": false,
  "rawData": "0x304877d10000000000000000000000000000000000000000000000000000000000000002",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "publicFunction",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "publicFunction",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": 7n,
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000007",
    "type": "FunctionResultEvent",
  },
  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;

exports[`internal-calls > test function fallback 1`] = `
{
  "args": [
    1n,
  ],
  "callType": "CALL",
  "called": [
    {
      "args": [],
      "callType": "CALL",
      "called": [],
      "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
      "depth": 1,
      "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "functionLineEnd": 29,
      "functionLineStart": 26,
      "functionName": "",
      "functionSource": "test-contracts/internal-calls/CalleeContract.sol",
      "functionType": "fallback",
      "precompile": false,
      "rawData": "0x307831",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [
          {
            "args": [
              "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
              "Fallback function called",
              0n,
            ],
            "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
            "eventName": "Log",
            "eventSignature": "Log(address,string,uint256)",
            "functionName": "",
            "functionType": "fallback",
            "rawData": [
              "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              [
                "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
                "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
              ],
              "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001846616c6c6261636b2066756e6374696f6e2063616c6c65640000000000000000",
            ],
          },
        ],
        "returnValueRaw": "0x307831",
        "type": "FunctionResultEvent",
      },
      "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [],
              "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
              "depth": 0,
              "from": "0x0000000000000000000000000000000000000000",
              "functionLineEnd": 38,
              "functionLineStart": 35,
              "functionName": "privateFunction",
              "functionSource": "test-contracts/internal-calls/CallerContract.sol",
              "functionType": "function",
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "0x",
                "type": "FunctionResultEvent",
              },
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionLineEnd": 29,
          "functionLineStart": 25,
          "functionName": "internalFunction",
          "functionSource": "test-contracts/internal-calls/CallerContract.sol",
          "functionType": "function",
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "0x",
            "type": "FunctionResultEvent",
          },
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionLineEnd": 43,
      "functionLineStart": 40,
      "functionName": "publicFunction",
      "functionSource": "test-contracts/internal-calls/CallerContract.sol",
      "functionType": "function",
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "0x",
        "type": "FunctionResultEvent",
      },
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionLineEnd": 56,
  "functionLineStart": 51,
  "functionName": "callAnotherContractWithFallback",
  "functionSource": "test-contracts/internal-calls/CallerContract.sol",
  "functionType": "function",
  "precompile": false,
  "rawData": "0x41fdd2fb0000000000000000000000000000000000000000000000000000000000000001",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": [
          "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
          "Fallback function called",
          0n,
        ],
        "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
        "eventName": "Log",
        "eventSignature": "Log(address,string,uint256)",
        "functionName": "callAnotherContractWithFallback",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
            "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
          ],
          "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001846616c6c6261636b2066756e6374696f6e2063616c6c65640000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "callAnotherContractWithFallback",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "callAnotherContractWithFallback",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
      {
        "args": {
          "message": "callAnotherContractWithFallback executed",
          "value": 5n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "callAnotherContractWithFallback",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000005000000000000000000000000000000000000000000000000000000000000002863616c6c416e6f74686572436f6e74726163745769746846616c6c6261636b206578656375746564000000000000000000000000000000000000000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": 5n,
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000005",
    "type": "FunctionResultEvent",
  },
  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;
